y.output

state 0
	$accept: .start $end 

	SELECT  shift 5
	CREATE  shift 6
	.  error

	stmt  goto 2
	select_stmt  goto 3
	create_table_stmt  goto 4
	start  goto 1

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  stmt.    (1)

	.  reduce 1 (src line 100)


state 3
	stmt:  select_stmt.semicolon_opt 
	semicolon_opt: .    (4)

	';'  shift 8
	.  reduce 4 (src line 115)

	semicolon_opt  goto 7

state 4
	stmt:  create_table_stmt.semicolon_opt 
	semicolon_opt: .    (4)

	';'  shift 8
	.  reduce 4 (src line 115)

	semicolon_opt  goto 9

state 5
	select_stmt:  SELECT.distinct_opt select_column_list from_clause where_opt group_by_opt having_opt order_by_opt limit_opt 
	distinct_opt: .    (7)

	DISTINCT  shift 11
	ALL  shift 12
	.  reduce 7 (src line 136)

	distinct_opt  goto 10

state 6
	create_table_stmt:  CREATE.TABLE table_name '(' column_def_list ')' 

	TABLE  shift 13
	.  error


state 7
	stmt:  select_stmt semicolon_opt.    (2)

	.  reduce 2 (src line 104)


state 8
	semicolon_opt:  ';'.    (5)

	.  reduce 5 (src line 117)


state 9
	stmt:  create_table_stmt semicolon_opt.    (3)

	.  reduce 3 (src line 109)


state 10
	select_stmt:  SELECT distinct_opt.select_column_list from_clause where_opt group_by_opt having_opt order_by_opt limit_opt 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'*'  shift 16
	'~'  shift 23
	.  error

	expr  goto 17
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	column_name  goto 20
	select_column  goto 15
	select_column_list  goto 14
	table_name  goto 18
	subquery  goto 26
	numeric_literal  goto 32

state 11
	distinct_opt:  DISTINCT.    (8)

	.  reduce 8 (src line 140)


state 12
	distinct_opt:  ALL.    (9)

	.  reduce 9 (src line 144)


state 13
	create_table_stmt:  CREATE TABLE.table_name '(' column_def_list ')' 

	IDENTIFIER  shift 46
	.  error

	table_name  goto 45

state 14
	select_stmt:  SELECT distinct_opt select_column_list.from_clause where_opt group_by_opt having_opt order_by_opt limit_opt 
	select_column_list:  select_column_list.',' select_column 

	','  shift 48
	FROM  shift 49
	.  error

	from_clause  goto 47

state 15
	select_column_list:  select_column.    (10)

	.  reduce 10 (src line 150)


state 16
	select_column:  '*'.    (12)

	.  reduce 12 (src line 160)


state 17
	select_column:  expr.as_column_opt 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.LSHIFT expr 
	expr:  expr.RSHIFT expr 
	expr:  expr.CONCAT expr 
	expr:  expr.JSON_EXTRACT_OP expr 
	expr:  expr.JSON_UNQUOTE_EXTRACT_OP expr 
	expr:  expr.cmp_op expr 
	expr:  expr.cmp_inequality_op expr 
	expr:  expr.like_op expr 
	expr:  expr.like_op expr ESCAPE expr 
	expr:  expr.ANDOP expr 
	expr:  expr.OR expr 
	expr:  expr.IS expr 
	expr:  expr.IS ISNOT expr 
	expr:  expr.ISNULL 
	expr:  expr.NOTNULL 
	expr:  expr.NOT NULL 
	expr:  expr.between_op expr AND expr 
	expr:  expr.COLLATE IDENTIFIER 
	expr:  expr.IN col_tuple 
	expr:  expr.NOT IN col_tuple 
	as_column_opt: .    (15)

	IDENTIFIER  shift 88
	STRING  shift 89
	AS  shift 76
	OR  shift 67
	ANDOP  shift 66
	NOT  shift 71
	IS  shift 68
	MATCH  shift 81
	GLOB  shift 80
	REGEXP  shift 79
	LIKE  shift 86
	BETWEEN  shift 87
	IN  shift 74
	ISNULL  shift 69
	NOTNULL  shift 70
	NE  shift 78
	'='  shift 77
	'<'  shift 82
	'>'  shift 83
	LE  shift 84
	GE  shift 85
	'&'  shift 56
	'|'  shift 57
	LSHIFT  shift 58
	RSHIFT  shift 59
	'+'  shift 51
	'-'  shift 52
	'*'  shift 53
	'/'  shift 54
	'%'  shift 55
	CONCAT  shift 60
	JSON_EXTRACT_OP  shift 61
	JSON_UNQUOTE_EXTRACT_OP  shift 62
	COLLATE  shift 73
	.  reduce 15 (src line 174)

	cmp_op  goto 63
	cmp_inequality_op  goto 64
	like_op  goto 65
	between_op  goto 72
	as_column_opt  goto 50
	col_alias  goto 75

state 18
	select_column:  table_name.'.' '*' 
	expr:  table_name.'.' column_name 

	'.'  shift 90
	.  error


state 19
	expr:  literal_value.    (60)

	.  reduce 60 (src line 413)


state 20
	expr:  column_name.    (61)

	.  reduce 61 (src line 415)


state 21
	expr:  '-'.expr 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'~'  shift 23
	.  error

	expr  goto 91
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	column_name  goto 20
	table_name  goto 92
	subquery  goto 26
	numeric_literal  goto 32

state 22
	expr:  '+'.expr 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'~'  shift 23
	.  error

	expr  goto 93
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	column_name  goto 20
	table_name  goto 92
	subquery  goto 26
	numeric_literal  goto 32

state 23
	expr:  '~'.expr 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'~'  shift 23
	.  error

	expr  goto 94
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	column_name  goto 20
	table_name  goto 92
	subquery  goto 26
	numeric_literal  goto 32

state 24
	expr:  CASE.expr_opt when_expr_list else_expr_opt END 
	expr_opt: .    (149)

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'~'  shift 23
	.  reduce 149 (src line 810)

	expr  goto 96
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	expr_opt  goto 95
	exists_subquery  goto 27
	column_name  goto 20
	table_name  goto 92
	subquery  goto 26
	numeric_literal  goto 32

state 25
	expr:  '('.expr_list ')' 
	subquery:  '('.select_stmt ')' 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	SELECT  shift 5
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'~'  shift 23
	.  error

	select_stmt  goto 98
	expr  goto 99
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	expr_list  goto 97
	column_name  goto 20
	table_name  goto 92
	subquery  goto 26
	numeric_literal  goto 32

state 26
	expr:  subquery.    (95)

	.  reduce 95 (src line 553)


state 27
	expr:  exists_subquery.    (96)

	.  reduce 96 (src line 557)


state 28
	expr:  CAST.'(' expr AS convert_type ')' 

	'('  shift 100
	.  error


state 29
	expr:  function_call_keyword.    (98)

	.  reduce 98 (src line 565)


state 30
	expr:  function_call_generic.    (99)

	.  reduce 99 (src line 566)


state 31
	table_name:  IDENTIFIER.    (59)
	column_name:  IDENTIFIER.    (106)
	function_call_generic:  IDENTIFIER.'(' distinct_function_opt expr_list_opt ')' filter_opt 
	function_call_generic:  IDENTIFIER.'(' '*' ')' filter_opt 

	'('  shift 101
	'.'  reduce 59 (src line 406)
	.  reduce 106 (src line 596)


state 32
	literal_value:  numeric_literal.    (100)

	.  reduce 100 (src line 569)


state 33
	literal_value:  STRING.    (101)

	.  reduce 101 (src line 574)


state 34
	literal_value:  BLOBVAL.    (102)

	.  reduce 102 (src line 578)


state 35
	literal_value:  TRUE.    (103)

	.  reduce 103 (src line 582)


state 36
	literal_value:  FALSE.    (104)

	.  reduce 104 (src line 586)


state 37
	literal_value:  NULL.    (105)

	.  reduce 105 (src line 590)


state 38
	exists_subquery:  EXISTS.subquery 

	'('  shift 103
	.  error

	subquery  goto 102

state 39
	exists_subquery:  NOT.EXISTS subquery 

	EXISTS  shift 104
	.  error


state 40
	function_call_keyword:  GLOB.'(' expr ',' expr ')' 

	'('  shift 105
	.  error


state 41
	function_call_keyword:  LIKE.'(' expr ',' expr ')' 
	function_call_keyword:  LIKE.'(' expr ',' expr ',' expr ')' 

	'('  shift 106
	.  error


state 42
	numeric_literal:  INTEGRAL.    (184)

	.  reduce 184 (src line 967)


state 43
	numeric_literal:  FLOAT.    (185)

	.  reduce 185 (src line 972)


state 44
	numeric_literal:  HEXNUM.    (186)

	.  reduce 186 (src line 976)


state 45
	create_table_stmt:  CREATE TABLE table_name.'(' column_def_list ')' 

	'('  shift 107
	.  error


state 46
	table_name:  IDENTIFIER.    (59)

	.  reduce 59 (src line 406)


state 47
	select_stmt:  SELECT distinct_opt select_column_list from_clause.where_opt group_by_opt having_opt order_by_opt limit_opt 
	where_opt: .    (38)

	WHERE  shift 109
	.  reduce 38 (src line 302)

	where_opt  goto 108

state 48
	select_column_list:  select_column_list ','.select_column 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'*'  shift 16
	'~'  shift 23
	.  error

	expr  goto 17
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	column_name  goto 20
	select_column  goto 110
	table_name  goto 18
	subquery  goto 26
	numeric_literal  goto 32

state 49
	from_clause:  FROM.table_expr_list 
	from_clause:  FROM.join_clause 

	IDENTIFIER  shift 46
	'('  shift 115
	.  error

	table_name  goto 114
	table_expr_list  goto 111
	table_expr  goto 113
	join_clause  goto 112

state 50
	select_column:  expr as_column_opt.    (13)

	.  reduce 13 (src line 165)


state 51
	expr:  expr '+'.expr 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'~'  shift 23
	.  error

	expr  goto 116
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	column_name  goto 20
	table_name  goto 92
	subquery  goto 26
	numeric_literal  goto 32

state 52
	expr:  expr '-'.expr 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'~'  shift 23
	.  error

	expr  goto 117
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	column_name  goto 20
	table_name  goto 92
	subquery  goto 26
	numeric_literal  goto 32

state 53
	expr:  expr '*'.expr 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'~'  shift 23
	.  error

	expr  goto 118
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	column_name  goto 20
	table_name  goto 92
	subquery  goto 26
	numeric_literal  goto 32

state 54
	expr:  expr '/'.expr 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'~'  shift 23
	.  error

	expr  goto 119
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	column_name  goto 20
	table_name  goto 92
	subquery  goto 26
	numeric_literal  goto 32

state 55
	expr:  expr '%'.expr 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'~'  shift 23
	.  error

	expr  goto 120
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	column_name  goto 20
	table_name  goto 92
	subquery  goto 26
	numeric_literal  goto 32

state 56
	expr:  expr '&'.expr 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'~'  shift 23
	.  error

	expr  goto 121
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	column_name  goto 20
	table_name  goto 92
	subquery  goto 26
	numeric_literal  goto 32

state 57
	expr:  expr '|'.expr 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'~'  shift 23
	.  error

	expr  goto 122
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	column_name  goto 20
	table_name  goto 92
	subquery  goto 26
	numeric_literal  goto 32

state 58
	expr:  expr LSHIFT.expr 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'~'  shift 23
	.  error

	expr  goto 123
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	column_name  goto 20
	table_name  goto 92
	subquery  goto 26
	numeric_literal  goto 32

state 59
	expr:  expr RSHIFT.expr 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'~'  shift 23
	.  error

	expr  goto 124
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	column_name  goto 20
	table_name  goto 92
	subquery  goto 26
	numeric_literal  goto 32

state 60
	expr:  expr CONCAT.expr 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'~'  shift 23
	.  error

	expr  goto 125
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	column_name  goto 20
	table_name  goto 92
	subquery  goto 26
	numeric_literal  goto 32

state 61
	expr:  expr JSON_EXTRACT_OP.expr 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'~'  shift 23
	.  error

	expr  goto 126
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	column_name  goto 20
	table_name  goto 92
	subquery  goto 26
	numeric_literal  goto 32

state 62
	expr:  expr JSON_UNQUOTE_EXTRACT_OP.expr 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'~'  shift 23
	.  error

	expr  goto 127
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	column_name  goto 20
	table_name  goto 92
	subquery  goto 26
	numeric_literal  goto 32

state 63
	expr:  expr cmp_op.expr 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'~'  shift 23
	.  error

	expr  goto 128
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	column_name  goto 20
	table_name  goto 92
	subquery  goto 26
	numeric_literal  goto 32

state 64
	expr:  expr cmp_inequality_op.expr 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'~'  shift 23
	.  error

	expr  goto 129
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	column_name  goto 20
	table_name  goto 92
	subquery  goto 26
	numeric_literal  goto 32

state 65
	expr:  expr like_op.expr 
	expr:  expr like_op.expr ESCAPE expr 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'~'  shift 23
	.  error

	expr  goto 130
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	column_name  goto 20
	table_name  goto 92
	subquery  goto 26
	numeric_literal  goto 32

state 66
	expr:  expr ANDOP.expr 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'~'  shift 23
	.  error

	expr  goto 131
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	column_name  goto 20
	table_name  goto 92
	subquery  goto 26
	numeric_literal  goto 32

state 67
	expr:  expr OR.expr 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'~'  shift 23
	.  error

	expr  goto 132
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	column_name  goto 20
	table_name  goto 92
	subquery  goto 26
	numeric_literal  goto 32

state 68
	expr:  expr IS.expr 
	expr:  expr IS.ISNOT expr 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	ISNOT  shift 134
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'~'  shift 23
	.  error

	expr  goto 133
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	column_name  goto 20
	table_name  goto 92
	subquery  goto 26
	numeric_literal  goto 32

state 69
	expr:  expr ISNULL.    (86)

	.  reduce 86 (src line 517)


state 70
	expr:  expr NOTNULL.    (87)

	.  reduce 87 (src line 521)


state 71
	expr:  expr NOT.NULL 
	expr:  expr NOT.IN col_tuple 
	cmp_op:  NOT.REGEXP 
	cmp_op:  NOT.GLOB 
	cmp_op:  NOT.MATCH 
	like_op:  NOT.LIKE 
	between_op:  NOT.BETWEEN 

	NULL  shift 135
	MATCH  shift 139
	GLOB  shift 138
	REGEXP  shift 137
	LIKE  shift 140
	BETWEEN  shift 141
	IN  shift 136
	.  error


state 72
	expr:  expr between_op.expr AND expr 

	IDENTIFIER  shift 31
	STRING  shift 33
	INTEGRAL  shift 42
	HEXNUM  shift 44
	FLOAT  shift 43
	BLOBVAL  shift 34
	TRUE  shift 35
	FALSE  shift 36
	NULL  shift 37
	'('  shift 25
	CAST  shift 28
	CASE  shift 24
	EXISTS  shift 38
	NOT  shift 39
	GLOB  shift 40
	LIKE  shift 41
	'+'  shift 22
	'-'  shift 21
	'~'  shift 23
	.  error

	expr  goto 142
	literal_value  goto 19
	function_call_keyword  goto 29
	function_call_generic  goto 30
	exists_subquery  goto 27
	column_name  goto 20
	table_name  goto 92
	subquery  goto 26
	numeric_literal  goto 32

state 73
	expr:  expr COLLATE.IDENTIFIER 

	IDENTIFIER  shift 143
	.  error


state 74
	expr:  expr IN.col_tuple 

	'('  shift 145
	.  error

	subquery  goto 146
	col_tuple  goto 144

state 75
	as_column_opt:  col_alias.    (16)

	.  reduce 16 (src line 178)


state 76
	as_column_opt:  AS.col_alias 

	IDENTIFIER  shift 88
	STRING  shift 89
	.  error

	col_alias  goto 147

state 77
	cmp_op:  '='.    (109)

	.  reduce 109 (src line 618)


state 78
	cmp_op:  NE.    (110)

	.  reduce 110 (src line 623)


state 79
	cmp_op:  REGEXP.    (111)

	.  reduce 111 (src line 627)


state 80
	cmp_op:  GLOB.    (113)

	.  reduce 113 (src line 635)


state 81
	cmp_op:  MATCH.    (115)

	.  reduce 115 (src line 643)


state 82
	cmp_inequality_op:  '<'.    (117)

	.  reduce 117 (src line 653)


state 83
	cmp_inequality_op:  '>'.    (118)

	.  reduce 118 (src line 658)


state 84
	cmp_inequality_op:  LE.    (119)

	.  reduce 119 (src line 662)


state 85
	cmp_inequality_op:  GE.    (120)

	.  reduce 120 (src line 666)


state 86
	like_op:  LIKE.    (121)

	.  reduce 121 (src line 672)


state 87
	between_op:  BETWEEN.    (123)

	.  reduce 123 (src line 683)


state 88
	col_alias:  IDENTIFIER.    (18)

	.  reduce 18 (src line 187)


state 89
	col_alias:  STRING.    (19)

	.  reduce 19 (src line 192)


state 90
	select_column:  table_name '.'.'*' 
	expr:  table_name '.'.column_name 

	IDENTIFIER  shift 150
	'*'  shift 148
	.  error

	column_name  goto 149

state 91
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr.LSHIFT expr 
	expr:  expr.RSHIFT expr 
	expr:  expr.CONCAT expr 
	expr:  expr.JSON_EXTRACT_OP expr 
	expr:  expr.JSON_UNQUOTE_EXTRACT_OP expr 
	expr:  expr.cmp_op expr 
	expr:  expr.cmp_inequality_op expr 
	expr:  expr.like_op expr 
	expr:  expr.like_op expr ESCAPE expr 
	expr:  '-' expr.    (79)
	expr:  expr.ANDOP expr 
	expr:  expr.OR expr 
	expr:  expr.IS expr 
	expr:  expr.IS ISNOT expr 
	expr:  expr.ISNULL 
	expr:  expr.NOTNULL 
	expr:  expr.NOT NULL 
	expr:  expr.between_op expr AND expr 
	expr:  expr.COLLATE IDENTIFIER 
	expr:  expr.IN col_tuple 
	expr:  expr.NOT IN col_tuple 

	.  reduce 79 (src line 485)
